# Altamira

./: CMakeLists.txt  README.md  project.cmake  requirements.txt  requirements1.txt  requirements2.txt  telemRead.sh
AltamiraDeployment/: CMakeLists.txt  Main.cpp  README.md
AltamiraDeployment/Top/: AltamiraDeploymentPackets.xml  AltamiraDeploymentTopology.cpp  AltamiraDeploymentTopology.hpp  AltamiraDeploymentTopologyDefs.hpp  CMakeLists.txt  instances.fpp  topology.fpp
Components/: CMakeLists.txt
Components/BMP388/: BMP388.cpp  BMP388.fpp  BMP388.hpp  CMakeLists.txt
Components/BMP388/docs/: sdd.md
Components/BNO085/: BNO085.cpp  BNO085.fpp  BNO085.hpp  CMakeLists.txt
Components/BNO085/docs/: sdd.md
Ports/: BMPDataPorts.fpp  CMakeLists.txt  I2C.fpp
Types/: CMakeLists.txt  Types.fpp
